[gd_scene load_steps=7 format=3 uid="uid://bjg35coicgu6m"]

[ext_resource type="Texture2D" uid="uid://derwrsdpmjns6" path="res://tilep map/2dcitywithoutoutline/house2/simple_rpg_gui_-_copia-removebg-preview.png" id="1_7mgtq"]
[ext_resource type="Script" path="res://panel_ui.gd" id="1_htbl3"]
[ext_resource type="Texture2D" uid="uid://h80eopyocgp6" path="res://icon/hamburguesa-icon.png" id="3_k5r1o"]
[ext_resource type="Texture2D" uid="uid://bmxfc5qtm4cy6" path="res://icon/papas-frita-icon.png" id="4_62qj3"]
[ext_resource type="Texture2D" uid="uid://bhyisd54u31eg" path="res://icon/papas-fritas-icon.png" id="5_7pqk8"]

[sub_resource type="LabelSettings" id="LabelSettings_3d62b"]
font_size = 5
font_color = Color(0, 0, 0, 1)

[node name="PanelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_htbl3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -24.0
offset_right = 425.0
offset_bottom = 392.0
texture = ExtResource("1_7mgtq")

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -104.0
offset_right = 1770.5
offset_bottom = 331.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0599217, 0.0833333)
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5

[node name="producto_hamburguesa" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
icon = ExtResource("3_k5r1o")
flat = true

[node name="producto_hotdog" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
icon = ExtResource("4_62qj3")
flat = true

[node name="producto_papas" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
icon = ExtResource("5_7pqk8")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 101.0
offset_right = 85.0
offset_bottom = 141.0
scale = Vector2(2.42802, 3.45942)

[node name="ImagenProductoGrande" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="HBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 245.0
offset_right = 55.0
offset_bottom = 295.0
scale = Vector2(3.99037, 1.24745)

[node name="NombreProducto" type="Label" parent="HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_3d62b")

[node name="PrecioProducto" type="Label" parent="HBoxContainer2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_3d62b")

[node name="boton_confirmar" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 326.0
offset_right = 231.0
offset_bottom = 357.0
scale = Vector2(1.41, 0.891377)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "CONFIRMAR"
flat = true
